3d cursor crash when using shortcut #94109

Closed
opened 2021-12-15 14:36:43 +01:00 by kevin donovan · 10 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: AMD Radeon RX 5700 ATI Technologies Inc. 4.5.14802 Core Profile Context 21.12.1 30.0.14011.3017

Blender Version
Broken: version: 3.1.0 Alpha, 3.0.0, 2.93LTS
Caused by 3fab16fe8e

Short description of error
In edit mode use the shift + right mouse button to use 3d cursor and use the G shortcut while moving 3d cursor
and blender crashes

Exact steps for others to reproduce the error

  • Open default scene
  • Switch to edit mode
  • {key Shift RMB} to drag 3d cursor
  • Release {key Shift} and press {key G} (do not stop cursor movement)
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: AMD Radeon RX 5700 ATI Technologies Inc. 4.5.14802 Core Profile Context 21.12.1 30.0.14011.3017 **Blender Version** Broken: version: 3.1.0 Alpha, 3.0.0, 2.93LTS Caused by 3fab16fe8e **Short description of error** In edit mode use the shift + right mouse button to use 3d cursor and use the G shortcut while moving 3d cursor and blender crashes **Exact steps for others to reproduce the error** - Open default scene - Switch to edit mode - {key Shift RMB} to drag 3d cursor - Release {key Shift} and press {key G} (do not stop cursor movement)
Author

Added subscriber: @kevindonovan

Added subscriber: @kevindonovan
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Can confirm the crash. Looks like a regression (Works fine here on 2.93.0)
Might have introduced with mesh editing optimization. (Will check)

blender.exe         :0x00007FF6464950C0  createEdgeSlideVerts_double_side
blender.exe         :0x00007FF646497BE0  initEdgeSlide_ex
blender.exe         :0x00007FF646494210  transform_mode_init
blender.exe         :0x00007FF646482C10  transformEvent
blender.exe         :0x00007FF64647D720  transform_modal
blender.exe         :0x00007FF645C03000  wm_handler_operator_call
blender.exe         :0x00007FF645C03FF0  wm_handlers_do_intern
blender.exe         :0x00007FF645C03620  wm_handlers_do
blender.exe         :0x00007FF645C006E0  wm_event_do_handlers
blender.exe         :0x00007FF645BEA810  WM_main
blender.exe         :0x00007FF64584F180  main
blender.exe         :0x00007FF64ADA5E58  __scrt_common_main_seh
KERNEL32.DLL        :0x00007FFBD7637020  BaseThreadInitThunk
ntdll.dll           :0x00007FFBD9622630  RtlUserThreadStart```
Hi, thanks for the report. Can confirm the crash. Looks like a regression (Works fine here on 2.93.0) Might have introduced with mesh editing optimization. (Will check) ```blender.exe :0x00007FF645A74C00 BKE_editmesh_from_object blender.exe :0x00007FF6464950C0 createEdgeSlideVerts_double_side blender.exe :0x00007FF646497BE0 initEdgeSlide_ex blender.exe :0x00007FF646494210 transform_mode_init blender.exe :0x00007FF646482C10 transformEvent blender.exe :0x00007FF64647D720 transform_modal blender.exe :0x00007FF645C03000 wm_handler_operator_call blender.exe :0x00007FF645C03FF0 wm_handlers_do_intern blender.exe :0x00007FF645C03620 wm_handlers_do blender.exe :0x00007FF645C006E0 wm_event_do_handlers blender.exe :0x00007FF645BEA810 WM_main blender.exe :0x00007FF64584F180 main blender.exe :0x00007FF64ADA5E58 __scrt_common_main_seh KERNEL32.DLL :0x00007FFBD7637020 BaseThreadInitThunk ntdll.dll :0x00007FFBD9622630 RtlUserThreadStart```
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Caused by 3fab16fe8e

cc @mano-wii

Caused by 3fab16fe8e cc @mano-wii

This issue was referenced by 52905c02ae

This issue was referenced by 52905c02ae42ab993fd78641497bec5936629ab1

This issue was referenced by 9765ddf4eb

This issue was referenced by 9765ddf4eb1ea0092b96624ee78b8852b5ebe1d1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-12-16 17:48:11 +01:00

This issue was referenced by 5c6418b077

This issue was referenced by 5c6418b0778854a8d22e2a8718035b86e4edb603
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94109
No description provided.